--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@ body {
   font-size: 3em;
 }
 
+#welcome {
+  font-size: 0.3em;
+  margin-right: 0.5em;
+}
 #navButtons {
   display: flex;
   flex-direction: row;
@@ -37,6 +41,7 @@ body {
 .navButton {
   margin: 1em;
   width: 8em;
+  height: 3em;
 }
 
 #topHeadlinesHeader {
@@ -44,7 +49,8 @@ body {
 }
 
 .headlineContainer {
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.5);
   cursor: pointer;
   margin: 1em;
   padding: 1em;
@@ -53,9 +59,20 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  transition: transform 100ms;
+}
+.headlineContainer:hover {
+  transform: scale(1.01);
+}
+
+.headlineDescription {
+  font-size: 0.9em;
 }
 
 .headlineImage {
+  box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  margin: 0.3em;
   min-width: 5vw;
   max-width: 5vw;
   min-height: 5vw;
