--- a/styles.css
+++ b/styles.css
@@ -274,3 +274,15 @@ a {
   justify-content: center;
   overflow: scroll;
 }
+
+#modalContents {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+#feedModalName {
+  font-size: 1.5em;
+}
