--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+#root {
+  height: 100%;
+}
+
 html {
   height: 100vh;
   width: 100vw;
@@ -43,6 +47,9 @@ body {
     height: 10vh;
     font-size: 3em;
     padding: 0.5em;
+  }
+  #mainContainer {
+    height: 90vh;
   }
   #categories,
   #sources {
@@ -120,6 +127,9 @@ body {
     font-size: 2em;
     padding: 0em;
   }
+  #mainContainer {
+    height: 82vh;
+  }
   #myFeedsPage {
     flex-direction: column;
   }
@@ -128,7 +138,7 @@ body {
     width: 50vw;
   }
   #myFeedsListContainer {
-    max-height: 20vh;
+    max-height: 25vh;
     overflow: scroll;
     justify-content: space-between;
   }
@@ -188,7 +198,6 @@ body {
 }
 
 #mainContainer {
-  height: 90vh;
   width: 100vw;
 }
 #topHeadlinesHeader {
@@ -198,10 +207,11 @@ body {
   overflow: scroll;
 }
 #myFeedsPage {
-  display: flex;
-
-  padding: 1em;
   height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 1em;
+
   box-sizing: border-box;
 }
 
@@ -210,7 +220,7 @@ body {
   flex: 2;
   /* margin: 0.5em; */
   padding: 1em;
-
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
